Explicitly state permalink in config
We don't want categories in permalinks because the categorisation may
change. So this is now in the config. The URLs do not change really
as nothing had a category before.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-permalink: pretty
+permalink: /:year/:month/:day/:title/
 paginate: 10
 
-exclude: ["CNAME"]
+exclude: ["CNAME", "README.md"]
 
 title: Kuudes mauste
 tagline: I see hungry people
